# teapot-rs

./: .dockerignore  .editorconfig  .gitignore  Cargo.toml  Dockerfile  README.md  rocket.toml
.github/: dependabot.yml
.github/workflows/: audit.yml  cargo.yml  rust-clippy.yml
src/: main.rs  paths.rs  tests.rs
