[package]
name = "teapot"
version = "0.1.7"
edition = "2021"
description = "A rusty teapot"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.3"
rocket_prometheus = "0.10.0-rc.3"

[dev-dependencies]
rusty-hook = "0.11"
